Documentation/Private/Template/public/kss.less
// Vars
@baseFontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;

@baseBackgroundColor: #FFF;
@baseBorderColor: #eee;
@baseActionColor: #4183c4;
@activeColor: #d26911;
@lightGrey: #f9f9f9;

@baseFontSize: 16px;
@baseTextColor: #3c474b;
@baseBorderRadius: 3px;
@baseSpacing: 15px;
@baseIndent: 20px;


/* Base styles */
.kssBody {
	background: @baseBackgroundColor;
	margin: 0;
}

/* Header */
.kss___header {
	position: relative;
	z-index: 1;
	margin-bottom: @baseSpacing*2;
	padding: 26px @baseIndent*4 26px @baseIndent;
	border-bottom: 1px solid @baseBorderColor;
	font-family: @baseFontFamily;
	background: @baseBackgroundColor;
	h1 {
		margin-top: 0;
		margin-bottom: 0;
		font-size: @baseFontSize + 4;
		font-weight: normal;
		line-height: 1;
		> a {
			color: @baseTextColor;
			&:hover {
				text-decoration: none;
			}
		}
	}
}

.kss___navWrapper {
	padding: @baseSpacing*3 @baseIndent 0;
	font-family: @baseFontFamily;
	font-size: @baseFontSize;
}
.kss___nav__item {
	border-bottom: 1px solid @baseBorderColor;
	> a {
		color: @baseActionColor;
		padding: @baseSpacing 3px @baseSpacing @baseSpacing/2;
		transition: .2s ease all;
		border-left: 2px solid #FFF;
		transition: .2s ease all;
		&:hover {
			text-decoration: none;
			background: @lightGrey;
			border-color: @lightGrey;
			color: @baseTextColor;
		}
	}
	&:last-child {
		border-bottom: 0;
	}
}
.kss___nav__item--active > a {
	color: @baseTextColor;
	border-color: @activeColor;
	&:hover {
		border-color: @activeColor;
		cursor: default;
		background: 0;
	}
}

.kss___nav--sticky {
	position: fixed;
	top: 0;
	width: 21%;
	height: 100%;
	overflow-y: scroll;
}

.kss___navSub {
	font-size: 12px;
	padding-bottom: @baseSpacing;
}
.kss___navSub__item {
	display: table-row !important;
	line-height: 1.2;
	> a {
		padding: 2px @baseSpacing/2 2px @baseIndent;
		border-left: 2px solid #fff;
		transition: .2s ease all;
		font-weight: 600;
		&:hover {
			text-decoration: none;
			color: @baseTextColor;
		}
	}
}
.kss___navSub__item--2 {
	> a {
		margin-top: .5em;
	}
	&:first-child > a {
		margin-top: 0;
	}
}
.kss___navSub__item--3 > a {
	padding-left: 30px;
	font-weight: 400;
}
.kss___navSub__item--active {
	> a {
		color: @baseTextColor;
		border-color: @activeColor;
	}
}
.kss___navSub__item__ref {
	display: table-cell;
	padding-right: @baseSpacing/2;
}
.kss___navSub__item__header {
	display: table-cell;
}

/* Styleguide */
.kss___contentWrapper {
	padding-right: @baseIndent*4;
}

// Styleguide headings
.kss-title,
.kss___contentWrapper > h1 {
	position: relative;
	margin: 0;
	font-family: @baseFontFamily;
	font-weight: 300;
	color: @baseTextColor;
	line-height: 1.2;
}
.kss___contentWrapper > h1 {
	margin: @baseSpacing*3 0 @baseSpacing;
	font-family: @baseFontFamily;
	font-size: @baseFontSize*2;
	.kss-title__refLink {
		padding-top: 11px;
		font-weight: bold;
	}
}
.kss___contentWrapper > h2,
.kss___contentWrapper > h3 {
	margin: @baseSpacing*2 0 @baseSpacing/2;
	font-family: @baseFontFamily;
	font-size: @baseFontSize + 4;
	font-weight: 400;
	color: @baseTextColor;
}
.kss___contentWrapper > p {
	margin: 0 0 @baseSpacing;
	font-family: @baseFontFamily;
	font-size: @baseFontSize;
	color: @baseTextColor;
}
.kss-depth-2 > .kss-title {
	padding: 0;
	margin: @baseSpacing*2 0 @baseSpacing/2;
	color: @baseTextColor;
	font-size: @baseFontSize*1.5;
	.kss-title__refLink {
		display: block;
		font-weight: bold;
		color: @baseActionColor;
	}
}
.kss-depth-2 > p {
	margin: 0 0 @baseSpacing;
	font-family: @baseFontFamily;
	font-size: @baseFontSize;
	color: @baseTextColor;
}
.kss-depth-3 > .kss-title {
	margin: 0;
	padding: 10px;
	border-top: 1px solid #000;
	border-radius: @baseBorderRadius @baseBorderRadius 0 0;
	font-size: @baseFontSize - 2;
	font-weight: bold;
	color: #fff;
	background: #333;
}
.kss-title__refLink {
	display: none;
	position: absolute;
	height: 100%;
	width: 30px;
	left: -30px;
	top: 0;
	text-align: center;
	font-size: @baseFontSize;
	color: @baseTextColor;
	padding-top: 6px;
	.kss-title:hover & {
		display: block;
	}
}

// Styleguide description box
.kss-box {
	padding: 1px @baseIndent;
	background: #f1f1f1;
	border-right: 1px solid #ddd;
	border-left: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	font-family: @baseFontFamily;
	color: @baseTextColor;
	p {
		margin: @baseSpacing 0;
	}
	&:empty { display: none; }
}

// Code example
.kss-styleguideSection {
	border-left: 1px solid @baseBorderColor;
	border-right: 1px solid @baseBorderColor;
}
.kss-styleguideElement {
	position: relative;
	padding: @baseIndent;
	border-bottom: 1px solid @baseBorderColor;
}
.kss-styleguideElement__heading {
	width: 75%;
	margin-bottom: @baseSpacing/2;
	font-family: @baseFontFamily;
	color: @baseTextColor;
	p {
		margin: 0;
	}
}
.kss-styleguideElement__class {
	position: absolute;
	top: 0;
	right: 0;
	max-width: 25%;
	padding: @baseSpacing/2 @baseSpacing;
	border: 1px solid @baseBorderColor;
	border-top: none;
	font-family: @baseFontFamily;
	font-size: 11px;
	color: #999;
	background: @lightGrey;
	border-radius: 0 0 0 @baseBorderRadius;
	transition: .2s ease all;
	.kss-styleguideElement:hover & {
		background: @baseActionColor;
		border-color: @baseActionColor;
		color: #FFF;
	}
}



/* Prettify */
.kss-markup {
	padding-bottom: @baseSpacing*3;
}
.prettyprint {
	padding: @baseSpacing;
	background: #edf6f8;
	border: 1px solid #dde7ea;
	border-top: 0;
	font-size: 12px;
	line-height: 1.2;
	border-radius: 0 0 @baseBorderRadius @baseBorderRadius;
}
.pln{color:#000}@media screen{.str{color:#080}.kwd{color:#008}.com{color:#800}.typ{color:#606}.lit{color:#066}.pun,.opn,.clo{color:#660}.tag{color:#008}.atn{color:#606}.atv{color:#080}.dec,.var{color:#606}.fun{color:red}}@media print,projection{.str{color:#060}.kwd{color:#006;font-weight:bold}.com{color:#600;font-style:italic}.typ{color:#404;font-weight:bold}.lit{color:#044}.pun,.opn,.clo{color:#440}.tag{color:#006;font-weight:bold}.atn{color:#404}.atv{color:#060}}ol.linenums{margin-top:0;margin-bottom:0}li.L0,li.L1,li.L2,li.L3,li.L5,li.L6,li.L7,li.L8{list-style-type:none}li.L1,li.L3,li.L5,li.L7,li.L9{background:#eee}


/* Footer */
.kss___footer {
	margin-top: @baseSpacing*2;
	padding: 26px @baseIndent;
	border-top: 1px solid @baseBorderColor;
	font-size: 11.5px;
	font-family: @baseFontFamily;
	color: @baseTextColor;
}


// Example styles
.kss___exampleWidth {
	background: #ECECEC;
	min-height: 32px;
	font-size: 12px;
	margin-bottom: 5px;
	line-height: 1;
	padding: 10px;
}

